iscale-hosting/network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This cloudformation template provisions a simple VPC instance with monitoring capabilities
Metadata:
  AWS::CloudFormation::Interface: 
    ParameterGroups:
      -
        Label:
          default: "Resource Configuration"
        Parameters:
          - OrgName
          - EnvName
      -
        Label:
          default: "Network Configuration"
        Parameters:
          - VpcCidrBlock
          - CidrCount
          - MaskSize
          - LogRetentionPeriod
          - ConnectionEvents

    ParameterLabels:
      OrgName:
        default: "Organization Name"
      EnvName:
        default: "Environment Name"
      VpcCidrBlock:
        default: "VPC CIDR Block"
      CidrCount:
        default: "CIDR Count"
      MaskSize:
        default: "Mask Size"
      LogRetentionPeriod:
        default: "Log Retention Period"

Parameters: 
  OrgName:
    Description: The name of the organization.
    Type: String
    Default: iscale-hosting
    AllowedPattern: "^[a-z]+(-[a-z]+)*$"
    ConstraintDescription: Organization must only contain lowercase letters, numbers and hyphen.
  EnvName:
    Description: The name of the environment
    Type: String
    Default: Production
    AllowedValues:
      - Production
      - Staging
      - Development
      - Test
  VpcCidrBlock:
    Description: The CIDR block for the VPC (e.g. 10.0.0.0/23)
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  CidrCount:
    Description: The number of CIDR to generate from the VPC CIDR Block
    Type: Number
    Default: 6
    MinValue: 1
    MaxValue: 256
  MaskSize:
    Description: The number of subnet bits for the CIDR (e.g. specifying a value "8" for this parameter will create a CIDR with a mask of "/24")
    Type: Number
    Default: 6
  LogRetentionPeriod:
    Description: The number of days to retain the log events in the specified log group
    Type: Number
    Default: 365
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
  MultiAz:
    Description: Creates resources on a multiple availability zones
    Type: String
    Default: true
    AllowedValues:
      - true
      - false
  CreatePrivate:
    Description: Set to true if creation of private subnet is enabled, this creates a Nat Gateway. Otherwise, disabled.
    Type: String
    Default: false
    AllowedValues:
      - true
      - false

Conditions: 
  IsUsEast: !Equals [!Ref 'AWS::Region', us-east-1]
  IsMultiAz: !Equals [!Ref MultiAz, true]
  IsCreatePrivate: !Equals [!Ref CreatePrivate, true]
  IsEitherMultiAzOrPrivate: !Or [Condition: IsMultiAz, Condition: IsCreatePrivate]
  IsMultiAzAndPrivate: !And [Condition: IsMultiAz, Condition: IsCreatePrivate]

Mappings: 
  EnvShort:
    Production:
      Name: prd
    Staging:
      Name: stg
    Development:
      Name: dev
    Test:
      Name: test
  RegionShort:
    us-east-2:
      Name: ue2
    us-east-1:
      Name: ue1
    us-west-1:
      Name: uw1
    us-west-2:
      Name: uw2
    ap-east-1:
      Name: ae1
    ap-south-1:
      Name: as1
    ap-northeast-1:
      Name: ane1
    ap-northeast-2:
      Name: ane2
    ap-northeast-3:
      Name: ane3
    ap-southeast-1:
      Name: ase1
    ap-southeast-2:
      Name: ase2
    ca-central-1:
      Name: cc1
    cn-north-1:
      Name: cn1
    cn-northwest-1:
      Name: cnw1
    eu-central-1:
      Name: ec1
    eu-west-1:
      Name: ew1
    eu-west-2:
      Name: ew2
    eu-west-3:
      Name: ew3
    eu-north-1:
      Name: en1
    me-south-1:
      Name: ms1
    sa-east-1:
      Name: se1
    us-gov-east-1:
      Name: uge1
    us-gov-west-1:
      Name: ugw1

Resources:

####
# VPC Section
####

# Actual VPC
  DefaultVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], vpc]]
      

# Default Security Group
  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]

# Default Route Table
  DefaultRoutTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]

# Default Network ACLs
  DefaultNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default]]

# Default Network ACL Entries
  DefaultNetworkAclEntryIngress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: "allow"
      RuleNumber: 100

  DefaultNetworkAclEntryEgress:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref DefaultNetworkAcl
      PortRange: 
        From: 0
        To: 0
      Protocol: -1
      RuleAction: "allow"
      RuleNumber: 100

# Default Network ACL Subnets
  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet1

  PublicSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAz
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PublicSubnet2

  PrivateSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsCreatePrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAzAndPrivate
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref PrivateSubnet2 

  InternalSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet1

  InternalSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsMultiAz
    Properties: 
      NetworkAclId: !Ref DefaultNetworkAcl
      SubnetId: !Ref InternalSubnet2

# DHCP Options
  DefaultDhcpOptions:
    Type: AWS::EC2::DHCPOptions
    Properties: 
      DomainName: !If [IsUsEast, ec2.internal, !Sub '${AWS::Region}.compute.internal'] 
      DomainNameServers: 
        - AmazonProvidedDNS
      NtpServers: 
        - 169.254.169.123
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], dhcp-options]]

  DefaultDhcpOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties: 
      DhcpOptionsId: !Ref DefaultDhcpOptions
      VpcId: !Ref DefaultVPC

# This create subnets for 2 AZs only if MultiAZ is enabled

# Public Subnet (AZ1)
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 0, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], public-a]]

# Public Subnet (AZ2)
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAz
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 1, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], public-b]]

# Private Subnet (AZ1)
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Condition: IsCreatePrivate
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 2, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], private-a]]

# Private Subnet (AZ2)
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAzAndPrivate
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 3, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], private-b]]

# Internal Subnet (AZ1)
  InternalSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 4, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], internal-a]]

# Internal Subnet (AZ2)
  InternalSubnet2:
    Type: AWS::EC2::Subnet
    Condition: IsMultiAz
    Properties:
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      VpcId: !Ref DefaultVPC
      CidrBlock: !Select [ 5, !Cidr [!Ref VpcCidrBlock, !Ref CidrCount, !Ref MaskSize]]
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], internal-b]]

# Internet Gateway
  DefaultInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], gateway]]

  DefaultInternetAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DefaultVPC
      InternetGatewayId: !Ref DefaultInternetGateway

# Public Route Table

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], public-route-table]]

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref DefaultInternetGateway

  PulibcSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PulibcSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAz
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# Nat Gateway

  NatGatewayElasticIp1:
    Type: AWS::EC2::EIP
    Condition: IsCreatePrivate
    DependsOn: DefaultInternetGateway
    Properties:
      Domain: vpc

  DefaultNatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: IsCreatePrivate
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], nat-a]]

  NatGatewayElasticIp2:
    Type: AWS::EC2::EIP
    Condition: IsMultiAzAndPrivate
    DependsOn: DefaultInternetGateway
    Properties:
      Domain: vpc

  DefaultNatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsMultiAzAndPrivate
    Properties: 
      AllocationId: !GetAtt NatGatewayElasticIp2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], nat-b]]

# Private Route Table

# Private Route Table (AZ1)
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Condition: IsCreatePrivate
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], private-route-table-a]]

  PrivateRoute1:
    Type: AWS::EC2::Route
    Condition: IsCreatePrivate
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref DefaultNatGateway1

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsCreatePrivate
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

# Private Route Table (AZ2)
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Condition: IsMultiAzAndPrivate
    Properties:
      VpcId: !Ref DefaultVPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], private-route-table-b]]

  PrivateRoute2:
    Type: AWS::EC2::Route
    Condition: IsMultiAzAndPrivate
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref DefaultNatGateway2

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAzAndPrivate
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

# Internal Route Table

  InternalSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref InternalSubnet1
      RouteTableId: !Ref DefaultRoutTable

  InternalSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: IsMultiAz
    Properties:
      SubnetId: !Ref InternalSubnet2
      RouteTableId: !Ref DefaultRoutTable

# Flow Log

  DefaultFlowLog:
    Type: AWS::EC2::FlowLog
    Properties: 
      DeliverLogsPermissionArn: !GetAtt FlowLogIamRole.Arn
      LogGroupName: !Ref FlowLogLogGroup
      ResourceId: !Ref DefaultVPC
      ResourceType: VPC
      TrafficType: ALL

####
# CloudWatch Section
####

# FlowLog Log Group
  FlowLogLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref LogRetentionPeriod
      LogGroupName: !Join ['-',[!Join ["",["/", !Ref OrgName]], !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], default/vpc-flow-log-group]]

####
# IAM Section
####

  FlowLogIamRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - 
            Sid: "1"
            Effect: "Allow"
            Action: "sts:AssumeRole"
            Principal:
              Service: "vpc-flow-logs.amazonaws.com"
      Policies:
        -
          PolicyName: "FlowLog-Policy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - 
                Sid: "1"
                Effect: "Allow"
                Action:
                  # - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                  # - logs:DescribeLogGroups
                  # - logs:DescribeLogStreams
                Resource: "*"

Outputs:
  VpcId: 
    Description: The ID of the VPC
    Value: !Ref DefaultVPC
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"

  VpcCidrBlock: 
    Description: The Cidr Block of the VPC
    Value: !Ref VpcCidrBlock
    Export:
      Name: !Sub "${AWS::StackName}-VpcCidrBlock"

  PublicSubnetId1: 
    Description: Public Subnet ID for AZ1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetId1"

  PublicSubnetId2: 
    Condition: IsMultiAz
    Description: Public Subnet ID for AZ2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetId2"

  PublicSubnetIds:
    Condition: IsMultiAz
    Description: Public Subnet Ids
    Value: !Join [',', [!Ref PublicSubnet1, !Ref PublicSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnetIds"

  PrivateSubnetId1: 
    Condition: IsCreatePrivate
    Description: Private Subnet ID for AZ1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetId1"

  PrivateSubnetId2: 
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet ID for AZ2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetId2"

  PrivateSubnetIds:
    Condition: IsMultiAzAndPrivate
    Description: Private Subnet Ids
    Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetIds"

  InternalSubnetId1: 
    Description: Internal Subnet ID for AZ1
    Value: !Ref InternalSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetId1"

  InternalSubnetId2: 
    Condition: IsMultiAz
    Description: Internal Subnet ID for AZ2
    Value: !Ref InternalSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetId2"

  InternalSubnetIds:
    Condition: IsMultiAz
    Description: Internal Subnet Ids
    Value: !Join [',', [!Ref InternalSubnet1, !Ref InternalSubnet2]]
    Export:
      Name: !Sub "${AWS::StackName}-InternalSubnetIds"

  DefaultSecurityGroupId: 
    Description: The default VPC security group
    Value: !GetAtt  DefaultSecurityGroup.GroupId
    Export:
      Name: !Sub "${AWS::StackName}-DefaultSecurityGroupId"

  Region: 
    Description: The region that an Amazon VPC was created in
    Value: !Ref 'AWS::Region'
    Export:
      Name: !Sub "${AWS::StackName}-Region"
